--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "qrcode.vue": "^3.6.0",
     "vue": "^3.5.13",
     "vue-i18n": "^11.0.0-beta.2"
   },
