--- a/package.json
+++ b/package.json
@@ -11,8 +11,7 @@
   "dependencies": {
     "qrcode.vue": "^3.6.0",
     "vue": "^3.5.13",
-    "vue-i18n": "^11.0.0-beta.2",
-    "vue3-google-adsense": "^0.2.2"
+    "vue-i18n": "^11.0.0-beta.2"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.2.1",
