--- a/package.json
+++ b/package.json
@@ -9,16 +9,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@codemirror/commands": "^6.7.1",
-    "@codemirror/lang-json": "^6.0.1",
-    "@codemirror/language": "^6.10.6",
-    "@codemirror/state": "^6.4.1",
-    "@codemirror/theme-one-dark": "^6.1.2",
-    "@codemirror/view": "^6.35.2",
-    "codemirror": "^6.0.1",
     "element-plus": "^2.9.0",
-    "json-parse-better-errors": "^1.0.2",
-    "json2xml": "^0.1.3",
+    "qr-scanner": "^1.4.2",
     "qrcode.vue": "^3.6.0",
     "vue": "^3.5.13",
     "vue-i18n": "^11.0.0-beta.2"
