--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@codemirror/view": "^6.35.2",
     "@element-plus/icons-vue": "^2.3.1",
     "codemirror": "^6.0.1",
+    "diff-match-patch": "^1.0.5",
     "element-plus": "^2.9.0",
     "qr-scanner": "^1.4.2",
     "qrcode.vue": "^3.6.0",
